# datachain_premium

authentication/: userdb.yaml
frontend/: login.py  pyproject.toml
frontend/app_pages/: andre.py  pips.py  sean.py
frontend/app_pages/backend/: sage_backend.py
frontend/app_pages/data/: clean_data.csv
frontend/html_notebooks/: SageMakerAutopilotCandidateDefinitionNotebook.html
