[tool.poetry]
name = "datachain-frontend"
version = "0.1.0"
description = "Datachain Capstone"
authors = ["Charles Calapini <charles@calapini.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
pandas = "^2.1.3"
nbconvert = "^7.12.0"
streamlit-extras = "^0.3.5"
openai = "^1.3.7"
poetry-dotenv = "^0.4.0"
python-dotenv = "^1.0.0"
sagemaker = "^2.199.0"
psycopg2-binary = "^2.9.9"
streamlit-authenticator = "^0.2.3"
streamlit-option-menu = "^0.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
